--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,8 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/express": "^5.0.5",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.8",
     "prisma": "^7.0.1",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3"
@@ -24,10 +26,13 @@
     "@prisma/client": "^7.0.1",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.3",
+    "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.16.3",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "zod": "^4.1.13"
   }
 }
