--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,9 @@
   "scripts": {
     "dev": "tsx watch src/index.ts"
   },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
