--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,12 +37,14 @@
     "@radix-ui/react-toggle": "^1.1.10",
     "@radix-ui/react-toggle-group": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "axios": "^1.13.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
+    "lucide": "^0.555.0",
     "lucide-react": "^0.555.0",
     "next": "16.0.7",
     "next-themes": "^0.4.6",
