--- a/backend/package.json
+++ b/backend/package.json
@@ -6,9 +6,12 @@
   "type": "module",
   "scripts": {
     "dev": "tsx watch src/index.ts",
-    "build": "npx prisma generate && npx prisma migrate deploy",
+    "build": "tsc && npx prisma generate",
+    "start": "node dist/index.js",
+    "postinstall": "npx prisma generate",
     "prisma:generate": "npx prisma generate",
     "prisma:migrate": "npx prisma migrate deploy",
+    "prisma:studio": "npx prisma studio",
     "seed": "tsx prisma/seed.ts"
   },
   "prisma": {
